--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -11,13 +11,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CiDn2Sk-VWqE",
-        "outputId": "6c01d464-83b9-4ad0-8382-251c6ad721a5"
+        "outputId": "f361d058-4b0d-4c65-b2a9-0bbfa7a9aae6"
       },
       "outputs": [
         {
@@ -25,18 +25,18 @@
           "name": "stdout",
           "text": [
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m23.7/23.7 MB\u001b[0m \u001b[31m12.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m823.6/823.6 kB\u001b[0m \u001b[31m54.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.1/14.1 MB\u001b[0m \u001b[31m67.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m731.7/731.7 MB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m410.6/410.6 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.6/121.6 MB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.5/56.5 MB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m124.2/124.2 MB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m196.0/196.0 MB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m166.0/166.0 MB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.1/99.1 kB\u001b[0m \u001b[31m12.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m67.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m23.7/23.7 MB\u001b[0m \u001b[31m11.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m823.6/823.6 kB\u001b[0m \u001b[31m42.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.1/14.1 MB\u001b[0m \u001b[31m43.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m731.7/731.7 MB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m410.6/410.6 MB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.6/121.6 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.5/56.5 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m124.2/124.2 MB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m196.0/196.0 MB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m166.0/166.0 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m99.1/99.1 kB\u001b[0m \u001b[31m9.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m25.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Building wheel for ktml (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sm3K7btmgiAZ",
-        "outputId": "75376934-7e9d-4435-8b57-e2a58570fbb6"
+        "outputId": "5d1a7405-fe9e-47f7-96a1-093f906be63e"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,6 +129,7 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn import svm\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.metrics import roc_auc_score, classification_report\n",
         "\n",
@@ -147,7 +148,7 @@
       "metadata": {
         "id": "szh6jWcBfPR4"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -188,9 +189,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TfYxj5x1ffYv",
-        "outputId": "85d08524-4434-4aa8-e1a4-b97e43c3b322"
+        "outputId": "3fb4e9f9-a776-4624-9cbd-53550b15990e"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,11 +517,11 @@
         "print('ROC AUC =', roc_auc)\n"
       ],
       "metadata": {
-        "id": "Dtb2khtufOaF",
-        "outputId": "0622e374-d782-4631-fc99-a6b2a798b7d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dtb2khtufOaF",
+        "outputId": "0622e374-d782-4631-fc99-a6b2a798b7d6"
       },
       "execution_count": 27,
       "outputs": [
@@ -580,23 +581,10 @@
         "print(best_RF_model)"
       ],
       "metadata": {
-        "id": "mnQea620M76E",
-        "outputId": "c52bcb7e-360f-4157-d63a-3ac1a3b39ec5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "mnQea620M76E"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Best parameters found:  {'bootstrap': False, 'min_samples_leaf': 7, 'min_samples_split': 6, 'n_estimators': 100}\n",
-            "RandomForestClassifier(bootstrap=False, min_samples_leaf=7, min_samples_split=6)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -608,11 +596,11 @@
         "print('ROC AUC =', roc_auc)"
       ],
       "metadata": {
-        "id": "CqJ4xIiOjNBZ",
-        "outputId": "538f29c7-a9d4-4aff-f447-c6d1c000a66c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CqJ4xIiOjNBZ",
+        "outputId": "538f29c7-a9d4-4aff-f447-c6d1c000a66c"
       },
       "execution_count": 28,
       "outputs": [
@@ -635,76 +623,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "def colorplot(clf, ax, x, y, h=100, precomputer=None):\n",
-        "    '''\n",
-        "    Overlay the decision areas as colors in an axes.\n",
-        "\n",
-        "    Input:\n",
-        "        clf: trained classifier\n",
-        "        ax: axis to overlay color mesh on\n",
-        "        x: feature on x-axis\n",
-        "        y: feature on y-axis\n",
-        "        h(optional): steps in the mesh\n",
-        "    '''\n",
-        "    # Create a meshgrid the size of the axis\n",
-        "    xstep = (x.max() - x.min() ) / 20.0\n",
-        "    ystep = (y.max() - y.min() ) / 20.0\n",
-        "    x_min, x_max = x.min() - xstep, x.max() + xstep\n",
-        "    y_min, y_max = y.min() - ystep, y.max() + ystep\n",
-        "    h = max((x_max - x_min, y_max - y_min))/h\n",
-        "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
-        "                         np.arange(y_min, y_max, h))\n",
-        "\n",
-        "    features = np.c_[xx.ravel(), yy.ravel()]\n",
-        "    if precomputer is not None:\n",
-        "        if type(precomputer) is RBFSampler:\n",
-        "            features = precomputer.transform(features)\n",
-        "        elif precomputer is rbf_kernel:\n",
-        "            features = rbf_kernel(features, X)\n",
-        "\n",
-        "    # Plot the decision boundary. For that, we will assign a color to each\n",
-        "    # point in the mesh [x_min, x_max]x[y_min, y_max].\n",
-        "    if hasattr(clf, \"decision_function\"):\n",
-        "        Z = clf.decision_function(features)\n",
-        "    else:\n",
-        "        Z = clf.predict_proba(features)\n",
-        "    if len(Z.shape) > 1:\n",
-        "        Z = Z[:, 1]\n",
-        "\n",
-        "    # Put the result into a color plot\n",
-        "    cm = plt.cm.RdBu_r\n",
-        "    Z = Z.reshape(xx.shape)\n",
-        "    ax.contourf(xx, yy, Z, cmap=cm, alpha=.8)\n",
-        "    del xx, yy, x_min, x_max, y_min, y_max, Z, cm\n"
-      ],
-      "metadata": {
-        "id": "8EYQkyeTjlOK",
-        "outputId": "200d8779-cbfa-4106-fbaf-95d709e92045",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        }
-      },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-31-992319c369cd>\u001b[0m in \u001b[0;36m<cell line: 44>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0mcolorplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbest_RF_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprecomputer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-31-992319c369cd>\u001b[0m in \u001b[0;36mcolorplot\u001b[0;34m(clf, ax, x, y, h, precomputer)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mx_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mxstep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mxstep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0my_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mystep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mystep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_max\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_max\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_min\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n\u001b[1;32m     19\u001b[0m                          np.arange(y_min, y_max, h))\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1464\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1465\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mNoReturn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1466\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1467\u001b[0m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1468\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## SVM"
@@ -715,9 +633,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "cv10_fold = model_selection.StratifiedKFold(n_splits=10)\n",
+        "\n",
+        "# Define the SVM model\n",
+        "svm_model = svm.SVC(probability=True)\n",
+        "\n",
+        "# Define the parameter grid for SVM\n",
+        "param_grid_svm = {\n",
+        "    'C': [0.01, 0.5, 1 ],  # Regularization parameter\n",
+        "     # 'kernel': ['linear', 'poly', 'rbf', 'sigmoid'],  # Kernel type - deze duurt heel lang om te runnen!\n",
+        "    'gamma': ['scale', 'auto']  # Kernel coefficient\n",
+        "}\n",
+        "\n",
+        "# Create the grid search object with ROC AUC scoring\n",
+        "grid_search_svm = GridSearchCV(svm_model, param_grid_svm, cv=cv10_fold, scoring='roc_auc', error_score='raise')\n",
+        "\n",
+        "# Fit the grid search to the data\n",
+        "grid_search_svm.fit(X_train, Y_train)\n",
+        "\n",
+        "# Print the best parameters\n",
+        "print(\"Best parameters found: \", grid_search_svm.best_params_)\n",
+        "\n",
+        "# Get the best estimator\n",
+        "best_svm_model = grid_search_svm.best_estimator_\n",
+        "\n",
+        "print(best_svm_model)"
+      ],
       "metadata": {
         "id": "Sq1xKlCeckiq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions_svm = best_svm_model.predict(X_train)\n",
+        "print(classification_report(Y_train, predictions_svm))\n",
+        "\n",
+        "roc_auc = roc_auc_score(Y_train, predictions_svm)\n",
+        "print('ROC AUC =', roc_auc)"
+      ],
+      "metadata": {
+        "id": "e4lQPSuA5NBO"
       },
       "execution_count": null,
       "outputs": []
